--- a/Nova pasta/style.css
+++ b/Nova pasta/style.css
@@ -6,17 +6,21 @@ margin: 0 auto;
 }
 .weapon-info {
   position: absolute;
-  top: 20px; /* Ajuste essa propriedade para definir a distância do topo */
-  right: 20px; /* Ajuste essa propriedade para definir a distância da direita */
-  display: flex; /* Use flex para alinhar os elementos horizontalmente */
-  align-items: center; /* Alinhe os elementos verticalmente ao centro */
+  top: 20px; 
+  right: 20px; 
+  display: flex; 
+  align-items: center; 
 }
 
 #weaponName {
-  margin-right: 10px; /* Adicione margem à direita para separar o nome da arma do ícone */
+  margin-right: 10px; 
 }
 
 #weaponIcon {
-  width: 50px; /* Ajuste o tamanho do ícone conforme necessário */
+  width: 50px; 
   height: 50px;
+}
+.no-select {
+  user-select: none; 
+  pointer-events: none; 
 }
