--- a/Nova pasta/style.css
+++ b/Nova pasta/style.css
@@ -1,25 +1,33 @@
-canvas 
-{
-border: 1px solid black;
-display: block;
-margin: 0 auto;
-}
-.weapon-info {
-  position: absolute;
-  top: 20px; 
-  right: 20px; 
-  display: flex; 
-  align-items: center; 
-}
-
-#weaponName {
-  margin-right: 10px; 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
 #weaponIcon {
-  width: 50px; 
-  height: 50px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 10px;
 }
+
+#gameCanvasContainer {
+  position: absolute;
+}
+
+#weaponImage {
+  width: 50px; /* Ajuste o tamanho conforme necessário */
+  height: 50px; /* Ajuste o tamanho conforme necessário */
+}
+
+canvas {
+  border: 1px solid black;
+  display: block;
+  margin: 0 auto;
+}
+
 .no-select {
   user-select: none; 
   pointer-events: none; 
